--- a/templates/registration.html
+++ b/templates/registration.html
@@ -26,7 +26,12 @@
     <h2>Join</h2>
     <p><label><input type="text" name="username" required pattern="^\w+$"> Username</label></p>
     <p><label><input type="text" name="name" required pattern="^\w+$"> Name</label></p>
-    <p><label><input type="number" name="gradYear" required pattern="^\w+$"> Graduation Year</label></p>
+    <p><label><select name="gradYear">
+        <option value="2019">2019</option>
+        <option value="2020">2020</option>
+        <option value="2021">2021</option>
+        <option value="2022">2022</option>
+    </select> Graduation Year</label></p>
     <p><label><input type="email" name="email"> Email</label></p>
     <p><label><input type="text" name="dorm"> Dorm Location</label></p>
     <p><label><input type="password" name="password1" required> Password </label></p>
