--- a/templates/registration.html
+++ b/templates/registration.html
@@ -25,7 +25,7 @@
 <form id="joinform" action="{{url_for('register')}}" method="post">
     <h2>Join</h2>
     <p><label><input type="text" name="username" required pattern="^\w+$"> Username</label></p>
-    <p><label><input type="text" name="name" required pattern="^\w+$"> Name</label></p>
+    <p><label><input type="text" name="name"> Name</label></p>
     <p><label><select name="gradYear">
         <option value="2019">2019</option>
         <option value="2020">2020</option>
