--- a/templates/main.html
+++ b/templates/main.html
@@ -26,6 +26,11 @@
         <button id="loginbutton" type="submit" name="submit" value="login"> Log In </button> 
 </form>
 <p>Logged in as: {{username}}</p>
+
+<form id="logout" method="POST" action="{{url_for('logout')}}">
+        <button id="logout" type="submit" name="submit" value="logout"> Log Out </button> 
+</form>
+
 <form id="register" methods="[POST,GET]" action="{{url_for('register')}}">
         <button id="registerbutton" type="submit" name="submit" value="register"> Register </button> 
 </form>
