--- a/templates/main.html
+++ b/templates/main.html
@@ -39,6 +39,10 @@
         <button id="account" type="submit" name="submit" value="account"> My Account </button> 
 </form>
 
+<form id="account" method="GET" action="{{url_for('uploadpost')}}">
+        <button id="upload" type="submit" name="submit" value="upload"> Upload Item </button> 
+</form>
+
 <form id="search" method="POST" action="/search/">
         <input id="searchterm" placeholder="Search for posts" name="searchterm">
         <button id="searchbutton" type="submit" name="submit" value="Search"> Search </button> 
