--- a/templates/form.html
+++ b/templates/form.html
@@ -24,7 +24,7 @@
     
     <!-- Upload form that takes all the necessary information for a post 
     and sends it to the backend, items table -->
-    <form id="uploadform" action="{{url_for('uploadpost')}}" method="post">
+    <form id="uploadform" action="{{url_for('uploadPost')}}" method="post">
         <h2> Upload New Item </h2>
         <p><label><b><em>Description </em></b><br><textarea rows="4" cols="50" maxlength="100" name="description"></textarea></label></p>
         <p><label><b><em>Price $ </em></b><br><input type="text" name="price"></label></p>
