--- a/templates/account.html
+++ b/templates/account.html
@@ -32,7 +32,6 @@
   <tr>
     <th>Description</th>
     <th>Price</th>
-    <th>Availability</th>
     <th>Category</th>
     <th>Photo</th>
   </tr>
@@ -40,7 +39,6 @@
   <tr class="post" data-iid="{{post.iid}}">
     <td class="description">{{post.description}}</td>
     <td class="price">{{post.price}}</td>
-    <td class="availability">{{post.availability}}</td>
     <td class="category">{{post.category}}</td>
     <td class="photo">{{post.photo}}</td>
     {% if isUser %}
@@ -56,9 +54,17 @@
         </form>
     </td>
     {% endif %}
+    {% if not isUser %}
+    td>
+      <form method="post" name="message" action="{{url_for('messageUser')}}">
+        <input type="hidden" name="message">
+        </form>
+    </td>
+    {% endif %}
   </tr>
   {% endfor %}
 </table>
+
 
 <div id="updateDialog" title="Update Details For Item">
   <form id="updateForm" method='POST'>
@@ -66,18 +72,6 @@
         <input type="hidden" name="iid" id="iid" value="">
         <p><label><b><em>Description </em></b><br><textarea id="description" rows="4" cols="50" maxlength="100" name="description"></textarea></label></p>
         <p><label><b><em>Price $ </em></b><br><input id="price" type="text" name="price"></label></p>
-        <p><label><b><em>Available? </em></b><br><select id="availability" name="avail">
-          <option value="yes">Yes</option>
-          <option value="no">No</option>
-        </select></label></p>
-        <p><label><b><em>Urgency</em></b></label><br>
-            <p>Specify urgency level from 1(lowest) to 5(highest)</p>
-            <input type="radio" name="urgency" value="1" id="1"> 1 
-            <input type="radio" name="urgency" value="2" id="2"> 2 
-            <input type="radio" name="urgency" value="3" id="3"> 3 
-            <input type="radio" name="urgency" value="4" id="4"> 4 
-            <input type="radio" name="urgency" value="5" id="5"> 5 
-        </p>
         <p><label><b><em>Category</em></b></label> <br>
             <input type="radio" name="category" value="food" id="food"> food <br>
             <input type="radio" name="category" value="clothing" id="clothing"> clothing <br>
@@ -85,7 +79,7 @@
             <input type="radio" name="category" value="services" id="services"> services <br>
             <input type="radio" name="category" value="utility" id="utility"> utility <br>
             <input type="radio" name="category" value="makeup" id="makeup"> makeup <br>
-            <input type="radio" name="category" value="bath-body" id="bath-body"> bath/body <br>
+            <input type="radio" name="category" value="bath-body" id="bath-body"> bath-body <br>
             <input type="radio" name="category" value="event" id="event"> event <br>
             <input type="radio" name="category" value="other" id="other">other 
             <input type="text" name="other" value="" id="otherDesc"><br></p>
@@ -93,8 +87,6 @@
     </form>
 </div>
 
-<script src="https://code.jquery.com/jquery.js"></script>
-<script src="https://code.jquery.com/jquery-1.9.1.js"></script> 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
@@ -111,7 +103,7 @@ $('#update').click(function(){
 
 $('#delete').click(function(){
     var postID = $(this).closest('tr').data('iid');
-    $.post("{{url_for('deletePost')}}",{'iid':postID});
+    $.post("{{url_for('deletePost')}}",{'iid':postID}, deletePostRow);
 })
 
 $('#updateButton').click(function(){
@@ -119,16 +111,17 @@ $('#updateButton').click(function(){
   console.log(iid);
   var description = $('#description').val();
   var price = $('#price').val();
-  var avail = $('#availability').val();
-  var urgency = $("input[name=urgency]:checked").val();
   var category = $("input[name=category]:checked").val();
   var otherDesc = $('#otherDesc').val();
   $.post("{{url_for('updatePost')}}",
-                {'description':description,'availability':avail,
-                                      'price': price,'urgency':urgency,'category':category,
-                                      'otherDesc':otherDesc,'iid':iid}, 
-                updatePostInfo)
-})
+            {'description':description, 'price': price,'category':category,
+            'otherDesc':otherDesc,'iid':iid}, 
+            updatePostInfo);
+});
+
+function deletePostRow(obj) {
+  $("[data-iid='" + obj + "']").closest("tr").remove();
+}
 
 function updatePostInfo(obj) {
   var iid = obj['iid'];
@@ -137,14 +130,8 @@ function updatePostInfo(obj) {
     post.find('.description').text(obj['description']);
   }
   console.log(post.find('.description').text());
-  if (obj['availability']){
-    post.find('.availability').text(obj['availability']);
-  }
   if (obj['price']){
     post.find('.price').text(obj['price']);
-  }
-  if (obj['urgency']){
-    post.find('.urgency').text(obj['urgency']);
   }
   if (obj['category']){
     post.find('.category').text(obj['category']);
@@ -160,9 +147,7 @@ function fillDialogForm(obj){
   $('#updateDialog #itemTitle').text('Update item ' + obj['iid']);
   $('#updateDialog #description').val(obj['description']);
   $('#updateDialog #price').val(obj['price']);
-  $('#updateDialog #availability').val(obj['availability']);
-  $("#" + obj['category'].replace('/','-')).prop("checked", true);
-  $('#' + obj['urgency']).prop("checked",true);
+  $("#" + obj['category']).prop("checked", true);
 }
 
 $(document).ready(function () {
