--- a/templates/main.html
+++ b/templates/main.html
@@ -57,18 +57,16 @@
         <th>Contact</th>
         <th>Description</th>
         <th>Price</th>
-        <th>Availability</th>
         <th>Category</th>
         <th>Photo</th>
         <th>Time Uploaded</th>
     </tr>
 
     {% for post in posts %}
-        <tr class = "tt" data-tt="{post.id}}">
-            <td class="name">{{post.name}}</td>
+        <tr class = "tt" data-tt="{post.iid}}">
+            <td class="name"><a href="{{url_for('account',usernameInput=post.username)}}">{{post.name}}</td>
             <td class="description">{{post.description}}</td>
             <td class="price">${{post.price}}</td>
-            <td class="availability">{{post.availability}}</td>
             <td class="category">{{post.category}}</td>
             <td class="photo">{{post.photo}}</td>
             <td class="time">{{post.uploaded}}</td>
