--- a/templates/forsale.html
+++ b/templates/forsale.html
@@ -1,23 +1,52 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h1>Items for Sale</h1>
         
+         {% block header %}Select Category{% endblock %} 
+         {% block content %}
+            <form method="post" action="{{url_for('search')}}">
+                <label for="menu-category">Search from Categories:</label> 
+                <select required name="menu-category">
+                    <option value="none">Choose One</option>
+                    {% for category in ['food','clothing','shoes','services','utility',
+            'makeup','bath/body','event','other'] %}
+                        <option value={{category}}>{{category}}</option>
+                    {% endfor %}
+                </select>
+                <input type="submit" name="submit" value="Choose" method="POST"/>
+            </form>
+         {% endblock %}
+        
+        <h1>Items for Sale</h1>
         <table>
+            <tr>
+            <th>Contact</th>
+            <th>Description</th>
+            <th>Category</th>
+            <th>Price</th>
+            <th>Availability</th>
+            <th>Urgency</th>
+            <th>Check</th>
+            <th>Dorm</th>
+            <th>Photo</th>
+            
+            </tr>
             {% for item in saleposts%}
-            <tr id={{item.iid}}> 
+            <tr id=iid value={{item.iid}}>
+                <td>{{item.name}}</td>
                 <td>{{item.description}}</td>
                 <td>{{item.category}}</td>
                 <td>{{item.price}}</td>
                 <td>{{item.availability}}</td>
                 <td>{{item.urgency}}</td>
-                <td>{{item.check}}</td>
                 <td>{{item.photo}}</td>
+                <td>{{item.dorm}}</td>
                 <td>{{item.other}}</td>
+                <td>
+               <button id="userinfo" type="submit" name="submit" value="userinfo"> Send Message </button>  </td>
             </tr>
             {%endfor%}
-        </table>    
+        </table>
+        
     </body>
-
 </html>
-
