--- a/templates/main.html
+++ b/templates/main.html
@@ -7,72 +7,70 @@
 <link rel='stylesheet' href="{{url_for('static',filename='style.css')}}">
 
 <body>
-     <div id="flashes">{% block flashes %}
-   {% with messages = get_flashed_messages() %}
-    {% if messages %}
+    <div id="flashes">{% block flashes %} {% with messages = get_flashed_messages() %} {% if messages %}
         <div id="messages">
-        {% for msg in messages %}
+            {% for msg in messages %}
             <p>{{msg}}</p>
-        {% endfor %}
+            {% endfor %}
         </div>
-    {% endif %}
-    {% endwith %}
-    {% endblock %} 
+        {% endif %} {% endwith %} {% endblock %}
     </div>
-{% block buttons %}
-<form id="login" method="POST" action="{{url_for('login')}}">
+    {% block buttons %}
+    <form id="login" method="POST" action="{{url_for('login')}}">
         <input id="login_username" placeholder="username" name="login_username">
         <input id="login_password" placeholder="password" name="login_password">
-        <button id="loginbutton" type="submit" name="submit" value="login"> Log In </button> 
-</form>
-<p>Logged in as: {{username}}</p>
+        <button id="loginbutton" type="submit" name="submit" value="login"> Log In </button>
+    </form>
+    <p>Logged in as: {{username}}</p>
 
-<form id="logout" method="POST" action="{{url_for('logout')}}">
-        <button id="logout" type="submit"> Log Out </button> 
-</form>
+    <form id="logout" method="POST" action="{{url_for('logout')}}">
+        <button id="logout" type="submit"> Log Out </button>
+    </form>
 
-<form id="register" methods="POST" action="{{url_for('register')}}">
-        <button id="registerbutton" type="submit"> Register </button> 
-</form>
+    <form id="register" methods="POST" action="{{url_for('register')}}">
+        <button id="registerbutton" type="submit"> Register </button>
+    </form>
 
-<form id="account" method='POST' action="{{url_for('account')}}">
-        <button id="account" type="submit"> My Account </button> 
-</form>
+    <form id="account" method='POST' action="{{url_for('account')}}">
+        <button id="account" type="submit"> My Account </button>
+    </form>
 
-<form id="account" method="GET" action="{{url_for('uploadPost')}}">
-        <button id="upload" type="submit" name="submit" value="upload"> Upload Item </button> 
-</form>
-{% endblock %}
-<form id="search" method="POST" action="{{url_for('stringSearch')}}">
+    <form id="account" method="GET" action="{{url_for('uploadPost')}}">
+        <button id="upload" type="submit" name="submit" value="upload"> Upload Item </button>
+    </form>
+    {% endblock %}
+    <form id="search" method="POST" action="{{url_for('stringSearch')}}">
         <input id="searchterm" placeholder="Search for posts" name="searchterm">
-        <button id="searchbutton" type="submit" name="submit" value="Search"> Search </button> 
-</form>
+        <button id="searchbutton" type="submit" name="submit" value="Search"> Search </button>
+    </form>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-<h1>Items for Sale</h1>
+    <h1>Items for Sale</h1>
 
-<div id="sposts">
-      
-<table id="posts-list">
-    <tr>
-        <th>Contact</th>
-        <th>Description</th>
-        <th>Price</th>
-        <th>Category</th>
-        <th>Photo</th>
-        <th>Time Uploaded</th>
-    </tr>
-    {% for post in posts %}
-        <tr class = "tt" data-tt="{post.iid}}">
-            <td class="name"><a href="{{url_for('account',usernameInput=post.username)}}">{{post.name}}</td>
-            <td class="description">{{post.description}}</td>
-            <td class="price">${{post.price}}</td>
-            <td class="category">{{post.category}}</td>
-            <td class="photo">{{post.photo}}</td>
-            <td class="time">{{post.uploaded}}</td>
+    <div id="sposts">
+
+        <table id="posts-list">
+            <tr>
+                <th>Contact</th>
+                <th>Description</th>
+                <th>Price</th>
+                <th>Category</th>
+                <th>Photo</th>
+                <th>Time Uploaded</th>
+            </tr>
+            {% for post in posts %}
+
+            <tr class="tt" data-tt="{post.iid}}">
+                <td class="name"><a href="{{url_for('account',usernameInput=post.username)}}">{{post.name}}</td>
+                <td class="description">{{post.description}}</td>
+                <td class="price">${{post.price}}</td>
+                <td class="category">{{post.category}}</td>
+                <td class="photo"><img src="{{url_for('blob',iid=post.iid)}}"></td>
+                <td class="time">{{post.uploaded}}</td>
             </tr>
     {% endfor %}
+    
     </table>
     </div>
 <script>
