--- a/templates/forsale.html
+++ b/templates/forsale.html
@@ -4,7 +4,7 @@
         <h1>Items for Sale</h1>
         
         <table>
-            {% for item in saleposts%}
+            {% for item in salePosts%}
             <tr id={{item.iid}}> 
                 <td>{{item.description}}</td>
                 <td>{{item.category}}</td>
