--- a/templates/main.html
+++ b/templates/main.html
@@ -58,24 +58,97 @@
         <th>Description</th>
         <th>Price</th>
         <th>Category</th>
+        <th>Other</th>
         <th>Photo</th>
-        <th>Time Uploaded</th>
     </tr>
 
     {% for post in posts %}
-        <tr class = "tt" data-tt="{post.iid}}">
+        <tr id = "post" data-iid="{{post.iid}}" data-uid="{{post.uid}}">
             <td class="name"><a href="{{url_for('account',usernameInput=post.username)}}">{{post.name}}</td>
             <td class="description">{{post.description}}</td>
             <td class="price">${{post.price}}</td>
             <td class="category">{{post.category}}</td>
+            <td class="other">{{post.other}}</td>
             <td class="photo">{{post.photo}}</td>
-            <td class="time">{{post.uploaded}}</td>
+            {% if currentUser != '' and currentUser != post.username %}
+            <td><button type="submit" class="messageUser">Message user</button></td>
+            <td><form method="post" name="message" action="{{url_for('messageUser')}}">
+                <input type="hidden" name="message"></form>
+            </td>
+            {% endif %}
             </tr>
     {% endfor %}
     </table>
+    
+<div id="messageUserDialog" title="Message User">
+    <form id="messageToUser" method='POST'>
+        <input type="hidden" name="uid" id="uid" value="">
+        <input type="hidden" name="iid" id="iid" value="">
+        <p><label><textarea id="messageBody" rows="4" cols="50" maxlength="200" name="messageBody"></textarea></label></p>
+        <p><button type="submit" id="messageButton">Send Message</button></p>
+    </form>
+</div>
 
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
 <script>
 /*global $*/
+
+$('#posts-list').on('click','.messageUser',function(event){
+    var postUID = $(this).closest('tr').data('uid');
+    var postIID = $(this).closest('tr').data('iid');
+    console.log(postUID);
+    console.log(postIID);
+    $.post("{{url_for('getUserItemInfo')}}",
+        {'uid':postUID,'iid':postIID},
+        fillDialogTitle)
+    $("#messageUserDialog").dialog("open");
+})
+
+$('#messageButton').click(function(){
+  var uid = $('#messageUserDialog #uid').val();
+  var iid = $('#messageUserDialog #iid').val();
+  var description = $('#messageUserDialog #messageBody').val();
+  $.post("{{url_for('messageUser')}}",
+        {'uid':uid,'iid':iid,'description':description}, 
+        alertMessageSent);
+})
+
+function alertMessageSent(obj) {
+    if (obj['last_insert_id()']) {
+        alert('Message sent successfully');
+    } else {
+        alert ('Message not sent. Please try again.')
+    }
+}
+
+function fillDialogTitle(obj) {
+    console.log(obj);
+    $('#messageUserDialog #uid').val(obj['user']['uid']);
+    $('#messageUserDialog #iid').val(obj['item']['iid']);
+    $("#messageUserDialog").dialog('option','title', 
+                                    'Message ' + obj['user']['username'] + ' about '
+                                            + obj['item']['description']);
+}
+
+$(document).ready(function () {
+    $(function () {
+        $("#messageUserDialog").dialog({
+
+            autoOpen: false,
+            modal: true,
+            show: {
+                effect: "blind",
+                duration: 1000
+            },
+            hide: {
+                effect: "explode",
+                duration: 1000
+            }
+        });
+    });
+});
 </script>
 
 
